--- a/src/components/HomeBanner/index.scss
+++ b/src/components/HomeBanner/index.scss
@@ -1,10 +1,7 @@
-.b-custom-navbar{
-  background-color: #fff;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  .left{
-    margin-left:32px;
-  }
+.b-home-banner{
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 320px;
+  border-radius: 8px;
+  margin-bottom:40px;
 }
