--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,4 +1,4 @@
-$bg-color:#f7f7f7;
+$bg-color:#fff;
 
 .b-home{
   &-main{
@@ -7,6 +7,14 @@ $bg-color:#f7f7f7;
     height: 100%;
   }
   &-body{
-    padding:60px 40px 80px;
+    padding:20px 30px 80px;
+    display: flex;
+    flex-direction: column;
+  }
+  &-poster{
+    height: 320px;
+    width: 100%;
+    background-color: #f2f2f2;
+    border-radius: 8px;
   }
 }
