--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,16 +1,8 @@
+@import '../../styles/mixin.scss';
+
 $bg-color:#fff;
 
 .b-home{
-  &-main{
-    background-color: $bg-color;
-    width: 100%;
-    height: 100%;
-  }
-  &-body{
-    padding:20px 30px 80px;
-    display: flex;
-    flex-direction: column;
-  }
   &-poster{
     height: 320px;
     width: 100%;
