--- a/src/components/HomeBanner/index.scss
+++ b/src/components/HomeBanner/index.scss
@@ -1,7 +1,10 @@
 .b-home-banner{
   background-color: #f2f2f2;
   width: 100%;
-  height: 320px;
-  border-radius: 8px;
+  height: 290px;
   margin-bottom:40px;
+  .banner-img{
+    height: 100%;
+    width:100%;
+  }
 }
