--- a/src/components/HomeNavigator/index.scss
+++ b/src/components/HomeNavigator/index.scss
@@ -1,24 +1,23 @@
 .b-home-navigator{
   width: 100%;
   box-sizing: border-box;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px 2px #f7f7f7;
+  box-shadow: 8px 13px 30px 0px rgba(203, 203, 203, 0.2);
+  border-radius: 20px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-bottom:40px;
   .item{
     width: 25%;
-    padding:20px 0;
+    padding:24px 0 35px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     .icon{
-      $icon:80px;
-      background-color: #f2f2f2;
+      $icon:85px;
+      //background-color: #f2f2f2;
       border-radius: 20px;
       height: $icon;
       width: $icon;
