--- a/src/components/HomeTitle/index.scss
+++ b/src/components/HomeTitle/index.scss
@@ -1,7 +1,8 @@
 .b-home-title{
-  margin-bottom:20px;
+  margin:40px 0 30px;
   .title{
-    font-size: 32px;
-    color:#000;
+    font-size: 34px;
+    color:#333;
+    font-weight: bold;
   }
 }
