--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -25,6 +25,13 @@
   align-items: center;
 }
 
+@mixin flex-row-end-between {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
 @mixin flex-column {
   display: flex;
   flex-direction: column;
