--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -63,3 +63,8 @@
   width: 1PX;
   transform: scaleX(0.5);
 }
+
+@mixin shadow-radius {
+  box-shadow: 5px 9px 20px 0px rgba(203, 203, 203, 0.2);
+  border-radius: 20px;
+}
