--- a/src/components/PageView/index.scss
+++ b/src/components/PageView/index.scss
@@ -1,4 +1,4 @@
-$bg-color:#fff;
+@import '../../styles/mixin.scss';
 
 .b-page{
   &-main{
@@ -7,8 +7,7 @@ $bg-color:#fff;
     height: 100%;
   }
   &-body{
-    display: flex;
-    flex-direction: column;
+    @include flex-column();
     min-height: 100%;
   }
 }
