--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,3 +1,4 @@
-$bg-color:#f7f7f7;
-$white-color:#ffffff;
-$line-color:#cccccc;
+$bg-color: #f7f7f7;
+$white-color: #ffffff;
+$line-color: #eeeeee;
+$primary-color: #ea4438;
