--- a/src/pages/volunteer/components/Modal/index.scss
+++ b/src/pages/volunteer/components/Modal/index.scss
@@ -25,8 +25,8 @@
     box-sizing: border-box;
     width: 100%;
     padding: 30px;
-    .b-bottom-line{
-      &::after{
+    .b-bottom-line {
+      &::after {
         background-color: #cccccc;
       }
     }
@@ -101,6 +101,30 @@
       &-arrow {
         height: 24px;
         width: 24px;
+        margin-left:6px;
+      }
+    }
+  }
+  &-detail-tab {
+    @include flex-row-center();
+    flex-wrap: wrap;
+    &-item {
+      flex: 1;
+      padding: 18px 30px;
+      background: #f7f7f7;
+      border-radius: 20px;
+      margin-right: 20px;
+      font-size: 26px;
+      font-weight: bold;
+      color: #666666;
+      white-space: nowrap;
+      text-align: center;
+      &.actived {
+        background: #d0ac58;
+        color: #ffffff;
+      }
+      &:last-of-type {
+        margin-right: 0;
       }
     }
   }
