--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,5 +1,5 @@
 $bg-color: #f7f7f7;
 $white-color: #ffffff;
-$line-color: #eeeeee;
+$line-color: #cccccc;
 $primary-color: #ea4438;
 $primary-bg: rgba(234, 68, 56, 0.2);
