--- a/src/pages/volunteer/components/Star/index.scss
+++ b/src/pages/volunteer/components/Star/index.scss
@@ -1,27 +1,31 @@
 @import "../../../../styles/mixin.scss";
 
-.b-vol-title {
-  @include flex-column-center-center();
+.b-vol-star {
+  @include flex-row-center-between();
   @include shadow-radius();
   margin: 20px 25px 0;
-  height: 175px;
+  padding: 50px 30px;
   background-color: $white-color;
-  &-options {
+  &-prepend {
     @include flex-row-center-center();
   }
   &-icon {
     height: 38px;
     width: 38px;
+    margin-right: 8px;
   }
   &-name {
-    margin-left: 7px;
     font-size: 32px;
-    font-weight: bold;
     color: #333333;
   }
-  &-desc {
-    margin-top: 13px;
-    font-size: 24px;
-    color: #666666;
+  &-content {
+    @include flex-row();
+    flex: 1;
+    margin-left: 20px;
+  }
+  &-img {
+    width: 38px;
+    height: 38px;
+    margin-right: 27px;
   }
 }
