--- a/src/pages/volunteer/components/Payment/index.scss
+++ b/src/pages/volunteer/components/Payment/index.scss
@@ -5,7 +5,7 @@
 }
 .b-vol-payment {
   @include flex-row();
-  margin: 20px 25px 0;
+  margin: 50px 25px 0;
   &-item {
     @include flex-column();
     flex: 1;
@@ -56,14 +56,48 @@
       color: #333333;
     }
   }
+  &-btn {
+    height: 90px;
+    line-height: 90px;
+    text-align: center;
+    background: #d0ac58;
+    border-radius: 45px;
+    font-size: 32px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 50px 25px 0;
+  }
 }
 
 .b-vol-contact {
   @include flex-column();
   @include shadow-radius();
-  margin: 20px 25px 120px;
+  margin: 50px 25px 0;
   background-color: $white-color;
-  &-top{
-    
+  &-top {
+    @include flex-row-center-between();
+    padding: 30px;
+  }
+  &-title {
+    position: relative;
+    font-size: 32px;
+    font-weight: bold;
+    color: #333333;
+    height: 32px;
+    line-height: 32px;
+    padding-left: 10px;
+    &::before {
+      @include column-line();
+      left: -8px;
+      width: 8px;
+      background: #d0ac58;
+    }
+  }
+  &-desc {
+    font-size: 26px;
+    color: #ea4438;
+  }
+  &-content {
+    padding: 30px 0 50px;
   }
 }
