--- a/src/pages/volunteer/components/Table/index.scss
+++ b/src/pages/volunteer/components/Table/index.scss
@@ -46,4 +46,14 @@
     font-weight: bold;
     color: #ffffff;
   }
+  &-chance {
+    height: 60px;
+    border: 2px solid #d0ac58;
+    border-radius: 30px;
+    margin: 20px 200px 0;
+    text-align: center;
+    font-size: 28px;
+    color: #d0ac58;
+    line-height: 60px;
+  }
 }
