--- a/src/app.scss
+++ b/src/app.scss
@@ -82,11 +82,13 @@ page {
       font-size: 32px;
       font-weight: 500;
       color: #333333;
-      margin-bottom: 18px;
+      margin-bottom: 8px;
     }
     .labels {
       @include flex-row-center();
+      flex-wrap: wrap;
       .label {
+        margin-top:10px;
         background: #f5f5f5;
         padding: 8px 10px;
         font-size: 24px;
