--- a/src/pages/college/lib/index.scss
+++ b/src/pages/college/lib/index.scss
@@ -1,20 +1,27 @@
-@import '../../../styles/mixin.scss';
+@import "../../../styles/mixin.scss";
 
-.b-lib-search{
+.b-lib-search {
   background-color: #f7f7f7;
   width: 100%;
   height: 100vh;
   @include flex-column();
-  .options{
+  .options {
     width: 100%;
     background-color: #fff;
     @include flex-column();
-    .pickers{
+    .pickers {
       @include flex-row-center-between();
-      padding:0 25px;
+      padding: 0 25px;
     }
   }
-  .result{
-    flex:1
+  .result {
+    flex: 1;
+  }
+  .loadmore {
+    margin: 30px auto;
+    font-size: 30px;
+    color: $primary-color;
+    padding: 0 60px 60px;
+    text-align: center;
   }
 }
