--- a/src/pages/college/lib/index.scss
+++ b/src/pages/college/lib/index.scss
@@ -24,4 +24,10 @@
     padding: 0 60px 60px;
     text-align: center;
   }
+  .nomore{
+    margin: 240px auto;
+    font-size: 30px;
+    color: #666;
+    text-align: center;
+  }
 }
