--- a/src/pages/college/detail/index.scss
+++ b/src/pages/college/detail/index.scss
@@ -11,7 +11,7 @@ page{
     }
     .tab-pane{
       @include flex-column();
-      margin:0 25px 30px;
+      margin:0 25px 80px;
       .video-view{
         @include shadow-radius();
         overflow: hidden;
@@ -32,6 +32,7 @@ page{
         line-height: 40px;
         background-color: #fff;
         @include shadow-radius();
+        @include flex-column();
       }
       .admission{
         @include shadow-radius();
