--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -37,6 +37,19 @@
   flex-direction: column;
 }
 
+@mixin flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@mixin flex-column-center-between {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @mixin flex-column-center-center {
   display: flex;
   flex-direction: column;
