--- a/src/components/Table/index.scss
+++ b/src/components/Table/index.scss
@@ -34,6 +34,14 @@
       }
     }
   }
+  &-no-data {
+    @include flex-row-center-center();
+    width: 100%;
+    padding: 30px 0;
+    font-size: 24px;
+    text-align: center;
+    color: #666;
+  }
   &-default {
     background-color: $bg-color;
     .th,
