--- a/src/pages/user/record/index.scss
+++ b/src/pages/user/record/index.scss
@@ -41,11 +41,13 @@
       .main {
         @include flex-column();
         padding: 50px 0 50px 50px;
-        
         .step-select {
+          &-city{
+            @include flex-row-center();
+          }
           &-item {
             @include flex-row-center-center();
-            width: 200px;
+            width: 190px;
             //min-width: 200rpx;
             padding: 30px 0;
             background: #f9f9f9;
@@ -56,8 +58,16 @@
             &:nth-of-type(n+3) {
               margin-top: 30px;
             }
+            &-sex{
+              height: 20px;
+              width: 20px;
+              margin-right:10px;
+            }
             &-text {
+              @include flex-row-center-center();
               font-size: 28px;
+              height: 1.4rem;
+              line-height: 1.4rem;
               color: #666666;
             }
             &.checked {
