--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -7,10 +7,11 @@
     flex-direction: column;
     box-shadow: 5px 8px 19px 0px rgba(203, 203, 203, 0.3);
     border-radius: 13px;
+    background-color: $white-color;
   }
   &-options{
     width: 100%;
-    height: 76px;
+    height: 98px;
     @include flex-row-center-between();
     .left{
       @include flex-row-center();
@@ -22,7 +23,7 @@
         margin-right:8px;
       }
       .label{
-        font-size: 27px;
+        font-size: 32px;
         font-family: PingFang SC;
         font-weight: bold;
         color: #333333;
