--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -3,8 +3,8 @@
 .b-search {
   width: 100%;
   box-sizing: border-box;
-  padding: 0 25px;
-  margin: 17px 0 0;
+  padding: 17px 25px 0;
+  height: 97px;
   &-main {
     height: 80px;
     background: #f9f9f9;
