--- a/src/components/PickerSelect2/index.scss
+++ b/src/components/PickerSelect2/index.scss
@@ -3,11 +3,8 @@
 .b-picker-item{
   position: relative;
   width: 100%;
-  height: 90px;
-  box-sizing: border-box;
   .picker-group{
     width: 100%;
-    height: 90px;
     @include flex-row-center-between();
   }
   .picker-view{
@@ -32,11 +29,11 @@
     }
   }
   .select-view{
-    position: absolute;
+    position: fixed;
     z-index: 999;
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    top:90px;
+    top:192px;
     left:0;
     right:0;
     bottom:0;
