--- a/src/pages/choose/index/index.scss
+++ b/src/pages/choose/index/index.scss
@@ -47,14 +47,8 @@
       .sub {
         &-select {
           @include flex-column();
-          padding: 30px 5px 30px 25px;
+          margin: 30px 5px 30px 25px;
           position: relative;
-          &::after {
-            @include row-line();
-            left: 25px;
-            right: 25px;
-            bottom: 0;
-          }
           &:last-of-type::after {
             display: none;
           }
@@ -64,6 +58,10 @@
           font-weight: bold;
           color: #333333;
           margin-bottom: 30px;
+        }
+        &-desc {
+          font-size: 28px;
+          color: #333333;
         }
         &-list {
           @include flex-row();
@@ -154,5 +152,18 @@
         margin-right: 20px;
       }
     }
+  }
+  .loadmore {
+    margin: 30px auto;
+    font-size: 30px;
+    color: $primary-color;
+    padding: 0 60px 60px;
+    text-align: center;
+  }
+  .nomore {
+    margin: 240px auto;
+    font-size: 30px;
+    color: #666;
+    text-align: center;
   }
 }
