--- a/src/components/Tabbar/index.scss
+++ b/src/components/Tabbar/index.scss
@@ -3,12 +3,13 @@
 .b-tab-bar{
   width: 100%;
   $tabH:86px;
-  @include flex-row-center-center();
+  @include flex-row-center-between();
   height: $tabH;
   background: #FFFFFF;
   .tab-item{
+    @include flex-row-center-center();
     padding:0 5px;
-    margin:0 40px;
+    margin:0 25px;
     height: $tabH;
     line-height: $tabH;
     font-size: 28px;
