--- a/src/pages/subject/detail/index.scss
+++ b/src/pages/subject/detail/index.scss
@@ -6,6 +6,7 @@
   .main{
     @include flex-column();
     width: 100%;
+    padding-bottom: 80px;
     .topic{
       @include flex-column();
       @include shadow-radius();
