--- a/src/pages/vip/guide/index.scss
+++ b/src/pages/vip/guide/index.scss
@@ -1,12 +1,12 @@
-@import "../../styles/mixin.scss";
+@import "../../../styles/mixin.scss";
 
 .b-guide-page {
   .bg {
     width: 100%;
-    height: 864px;
+    //height: 864px;
     box-sizing: border-box;
-    padding: 142px 60px 0 46px;
-    background-image: url(../../static/image/vip-bg.png);
+    padding: 142px 66px 10px 46px;
+    background-image: url(../../../static/image/vip-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 30px 0 10px;
