--- a/src/app.scss
+++ b/src/app.scss
@@ -174,17 +174,23 @@ page {
   background: #f9f9f9;
 }
 
-.b-vol-pages {
-  &-options {
-    @include flex-row-center-center();
-    position: relative;
-    padding: 30px 0;
-    width: 100%;
-    &-edit {
-      height: 38px;
-      width: 38px;
-      position: absolute;
-      right: 10px;
-    }
+.b-vol-comp-no-data {
+  @include flex-column-center-center();
+  padding: 50px 0;
+  &-desc {
+    font-size: 24px;
+    color: #666666;
+  }
+  &-btn {
+    width: 320px;
+    height: 80px;
+    background: $primary-bg;
+    border-radius: 40px;
+    line-height: 80px;
+    font-size: 28px;
+    font-weight: bold;
+    color: $primary-color;
+    margin-top: 30px;
+    text-align: center;
   }
 }
