--- a/src/pages/volunteer/components/MidTitle/index.scss
+++ b/src/pages/volunteer/components/MidTitle/index.scss
@@ -1,27 +1,16 @@
 @import "../../../../styles/mixin.scss";
 
-.b-vol-title {
-  @include flex-column-center-center();
-  @include shadow-radius();
-  margin: 20px 25px 0;
-  height: 175px;
-  background-color: $white-color;
+.b-vol-pages {
   &-options {
     @include flex-row-center-center();
-  }
-  &-icon {
-    height: 38px;
-    width: 38px;
-  }
-  &-name {
-    margin-left: 7px;
-    font-size: 32px;
-    font-weight: bold;
-    color: #333333;
-  }
-  &-desc {
-    margin-top: 13px;
-    font-size: 24px;
-    color: #666666;
+    position: relative;
+    padding: 30px 0;
+    width: 100%;
+    &-edit {
+      height: 30px;
+      width: 30px;
+      position: absolute;
+      right: 18px;
+    }
   }
 }
