--- a/src/components/PickerSelect/index.scss
+++ b/src/components/PickerSelect/index.scss
@@ -32,7 +32,7 @@
     }
   }
   .select-view{
-    position: absolute;
+    position: fixed;
     z-index: 999;
     height: 100vh;
     width: 100%;
