--- a/src/pages/volunteer/components/Payment/index.scss
+++ b/src/pages/volunteer/components/Payment/index.scss
@@ -65,7 +65,13 @@
     font-size: 32px;
     font-weight: bold;
     color: #ffffff;
-    margin: 50px 25px 0;
+    margin: 30px 25px 0;
+  }
+  &-chance {
+    margin-top: 30px;
+    font-size: 28px;
+    color: #d0ac58;
+    text-align: center;
   }
 }
 
