--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -1,12 +1,65 @@
-@import '../../styles/mixin.scss';
+@import "../../styles/mixin.scss";
 
-
-.b-home{
-  padding:30px 26px 80px;
-  &-poster{
-    height: 320px;
+.b-login {
+  &-page {
+    @include flex-column-center();
+    background-color: $white-color;
+    height: 100vh;
+    padding: 30px 26px 80px;
+  }
+  &-content {
+    @include flex-column-center();
     width: 100%;
-    background-color: #f2f2f2;
-    border-radius: 8px;
+    margin: 140px 0 200px;
+    .b-form-item{
+      width: 100%;
+    }
+    .b-form-input {
+      width: auto;
+      flex:1;
+    }
+    .b-form-content {
+      flex-wrap: nowrap;
+    }
+  }
+  &-phonecode {
+    font-size: 26px;
+    color:  $primary-color;
+    background-color: #f9f9f9;
+    padding:30px;
+    line-height: 1.4rem;
+    height: 1.4rem;
+  }
+  &-btn {
+    width: 100%;
+    height: 100px;
+    background: #ea4438;
+    border-radius: 20px;
+    line-height: 100px;
+    border-width: 0;
+    font-size: 32px;
+    font-weight: bold;
+    color: #ffffff;
+  }
+  &-avatar {
+    height: 140px;
+    width: 140px;
+    border-radius: 50%;
+    margin-bottom: 40px;
+    overflow: hidden;
+    background-color: $bg-color;
+  }
+  &-nickname {
+    font-size: 28px;
+    color: #666666;
+    margin-bottom: 140px;
+  }
+  &-usecode {
+    margin-top: 40px;
+    font-size: 28px;
+    color: #666666;
+    text {
+      color: $primary-color;
+    }
   }
 }
